# StenoByte

./: .gitignore  CMakeLists.txt  DEVELOPMENT_INFO.md  LICENSE  LICENSE_SUMMARY.md  README.md  StenoByte_Core.c  StenoByte_Core.h  StenoByte_Helper.c  StenoByte_Helper.h  main.c  oldmain.c.old
.github/workflows/: cmake-multi-platform.yml  codeql.yml
dockerfiles/: README.md
dockerfiles/alpine-dev-test/: Dockerfile
includes/: StenoByte_Core.c  StenoByte_Core.h  StenoByte_Helper.h  StenoByte_Helper_for_Linux.c
src/: stenobyte_demo.c  stenobyte_writer.c
